--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-pandas
-openpyxl
-folium
-streamlit-folium
-shapely
+streamlit>=1.50
+pandas>=2.2
+openpyxl>=3.1
+folium>=0.15
+streamlit-folium>=0.18
+shapely>=2.0
