--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 POSTGRES_URL=postgresql://user:password@host:5432/database
+JWT_SECRET=change-me-in-production
 DEFAULT_ADMIN_EMAIL=admin@logistics-hub.io
 DEFAULT_ADMIN_PASSWORD=ChangeMe123!
 ENVIRONMENT=dev
