--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,7 @@ JWT_SECRET=change-me-in-production
 DEFAULT_ADMIN_EMAIL=admin@logistics-hub.io
 DEFAULT_ADMIN_PASSWORD=ChangeMe123!
 ENVIRONMENT=dev
+DEFAULT_DRIVER_EMAIL=driver@logistics-hub.io
+DEFAULT_DRIVER_PASSWORD=DriverPass123!
+DEFAULT_SORTER_EMAIL=sorter@logistics-hub.io
+DEFAULT_SORTER_PASSWORD=SorterPass123!
